--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "graphql-yoga": "^1.16.9",
     "lodash": "^4.17.11",
     "mongoose": "^5.4.2",
+    "nodemon": "^1.18.9",
     "time-stamp": "^2.2.0",
     "uuid": "^3.3.2"
   },
